--- a/frontend/angula_php/src/app/admin/order-manager/order-manager.html
+++ b/frontend/angula_php/src/app/admin/order-manager/order-manager.html
@@ -3,20 +3,23 @@
   <table class="table table-bordered mb-0">
     <thead><tr><th>Mã ĐH</th><th>Khách hàng</th><th>Tổng tiền</th><th>Trạng thái</th><th>Thao tác</th></tr></thead>
     <tbody>
-      <tr>
-        <td>#DH001</td>
-        <td>Nguyễn Văn A</td>
-        <td>15.000.000đ</td>
-        <td><span class="badge bg-warning text-dark">Chờ xử lý</span></td>
+      @for (inv of invoices(); track $index) {
+        <tr>
+        <td>{{ inv.id }}</td>
+        <td>{{inv.user_id}}</td>
+        <td>{{inv.total_money}}</td>
+        <td><span class="badge bg-warning text-dark">{{inv.status}}</span></td>
         <td>
-          <select class="form-select form-select-sm d-inline-block w-auto">
-            <option>Đang giao</option>
-            <option>Hoàn thành</option>
-            <option>Hủy</option>
+          <select class="form-select form-select-sm d-inline-block w-auto" (change)="onChange(inv.id,$event)">
+            <option value="default">{{inv.status}}</option>
+            <option value="pending">Đang giao</option>
+            <option value="shipped">Hoàn thành</option>
+            <option value="paid">Hủy</option>
           </select>
-          <button class="btn btn-sm btn-danger ms-2"><i class="bi bi-trash"></i></button>
+          <button class="btn btn-sm btn-danger ms-2" (click)="deleteInvoice(inv.id)"><i class="bi bi-trash"></i></button>
         </td>
       </tr>
+      }
     </tbody>
   </table>
 </div>
