--- a/frontend/angula_php/src/app/admin/role-manager/role-manager.html
+++ b/frontend/angula_php/src/app/admin/role-manager/role-manager.html
@@ -1,36 +1,40 @@
-<div class="card shadow-sm">
-  <div class="card-header bg-white fw-bold">Phân quyền hệ thống</div>
-  <div class="card-body">
-    <table class="table table-bordered text-center align-middle">
-      <thead class="table-dark">
-        <tr>
-          <th class="text-start">Chức năng</th>
-          <th>Admin</th>
-          <th>Employer</th>
-          <th>Customer</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="text-start fw-bold">Quản lý User</td>
-          <td><input type="checkbox" checked disabled></td>
-          <td><input type="checkbox"></td>
-          <td><input type="checkbox" disabled></td>
-        </tr>
-        <tr>
-          <td class="text-start fw-bold">Quản lý Sản phẩm</td>
-          <td><input type="checkbox" checked disabled></td>
-          <td><input type="checkbox" checked></td>
-          <td><input type="checkbox" disabled></td>
-        </tr>
-        <tr>
-          <td class="text-start fw-bold">Mua hàng</td>
-          <td><input type="checkbox" checked></td>
-          <td><input type="checkbox" checked></td>
-          <td><input type="checkbox" checked></td>
-        </tr>
-      </tbody>
-    </table>
-    <button class="btn btn-primary float-end">Lưu cấu hình</button>
-  </div>
-</div>
+<form [formGroup]="permissionForm" (ngSubmit)="onSave()">
+
+  <table class="table table-bordered text-center align-middle">
+    <thead class="table-dark">
+      <tr>
+        <th class="text-start">Chức năng</th>
+        <th>Admin</th>
+        <th>Employer</th>
+        <th>Customer</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td class="text-start fw-bold">Quản lý User</td>
+        <td><input type="checkbox" formControlName="admin_user"></td>
+        <td><input type="checkbox" formControlName="employer_user"></td>
+        <td><input type="checkbox" formControlName="customer_user"></td>
+      </tr>
+
+      <tr>
+        <td class="text-start fw-bold">Quản lý Sản phẩm</td>
+        <td><input type="checkbox" formControlName="admin_product" ></td>
+        <td><input type="checkbox" formControlName="employer_product"></td>
+        <td><input type="checkbox" formControlName="customer_product"></td>
+      </tr>
+
+      <tr>
+        <td class="text-start fw-bold">Mua hàng</td>
+        <td><input type="checkbox" formControlName="admin_order"></td>
+        <td><input type="checkbox" formControlName="employer_order"></td>
+        <td><input type="checkbox" formControlName="customer_order"></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <button class="btn btn-primary float-end" type="submit">
+    Lưu cấu hình
+  </button>
+</form>
