--- a/frontend/angula_php/src/app/layout/navbar/navbar.html
+++ b/frontend/angula_php/src/app/layout/navbar/navbar.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Trang chủ</a>
+          <a class="nav-link" routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Trang chủ</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/products" routerLinkActive="active">Sản phẩm</a>
