--- a/frontend/angula_php/src/app/pages/home/home.css
+++ b/frontend/angula_php/src/app/pages/home/home.css
@@ -1,3 +1,4 @@
+
 /* --- HERO / BANNER SECTION --- */
 .hero-section {
   position: relative;
@@ -23,10 +24,23 @@
 
 .carousel-caption {
   z-index: 2;
-  bottom: 20%;
   left: 10%;
+  bottom: auto;        /* bỏ bottom */
+  top: 50%;
+  transform: translateY(-50%);
 }
 
+.carousel-item {
+  margin-top: 0cm;
+    width: 100vw;
+    height: 105vh;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* không méo ảnh */
+}
 /* Animation trượt lên cho chữ */
 .animate-up {
   opacity: 0;
@@ -170,3 +184,32 @@
 
 
 
+
+.content {
+  position: absolute;   /* ⬅ đổi fixed → absolute */
+margin-top: 2cm;
+  width: 100vw;
+  height: 90vh;
+  z-index: -1;
+  background-color: #000;
+   inset: 0;
+}
+
+  video {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    
+    /* MẤU CHỐT Ở ĐÂY: */
+    /* Khi xoay 90 độ, chiều rộng video phải bằng chiều cao màn hình (100vh) */
+    width: 100vh; 
+    /* Chiều cao video phải bằng chiều rộng màn hình (100vw) */
+    height: 100vw; 
+    
+    /* Xoay -90 độ và căn giữa */
+    transform: translate(-50%, -50%) rotate(-90deg);
+    
+    /* Đảm bảo video phủ kín khung hình đã xoay */
+    object-fit: cover; 
+    
+  }
