--- a/frontend/angula_php/src/app/pages/promotions/promotions.html
+++ b/frontend/angula_php/src/app/pages/promotions/promotions.html
@@ -15,7 +15,7 @@
             <img [src]="promo.image" class="img-fluid h-100 w-100 object-fit-cover promo-img" [alt]="promo.image">
             
             <div class="discount-badge">
-              <span class="fw-bold">{{ promo.discount_value }}</span>
+              <span class="fw-bold">{{ promo.discount }}</span>
             </div>
             
             <div class="date-overlay d-md-none">
