--- a/frontend/angula_php/src/app/admin/dashboard/dashboard.html
+++ b/frontend/angula_php/src/app/admin/dashboard/dashboard.html
@@ -14,17 +14,16 @@
          <i class="bi bi-box-seam me-2"></i> Quản lý Sản phẩm
       </a>
       
-      <a routerLink="/admin/banners" routerLinkActive="active-link" class="list-group-item list-group-item-action bg-transparent text-white-50">
-         <i class="bi bi-images me-2"></i> Quản lý Banner
-      </a>
+
       
       <a routerLink="/admin/orders" routerLinkActive="active-link" class="list-group-item list-group-item-action bg-transparent text-white-50">
          <i class="bi bi-receipt me-2"></i> Quản lý Hóa đơn
       </a>
-      
-      <a routerLink="/admin/roles" routerLinkActive="active-link" class="list-group-item list-group-item-action bg-transparent text-white-50">
-         <i class="bi bi-shield-lock-fill me-2"></i> Phân quyền
+      <a routerLink="/admin/voucher" routerLinkActive="active-link" class="list-group-item list-group-item-action bg-transparent text-white-50">
+         <i class="bi bi-receipt me-2"></i> Quản lý Voucher
       </a>
+      
+
 
       <a routerLink="/admin/permissions" routerLinkActive="active-link" class="list-group-item list-group-item-action bg-transparent text-white-50">
          <i class="bi bi-shield-lock-fill me-2"></i> Phân quyền permission
