--- a/frontend/angula_php/src/app/admin/permissionmanager/permissionmanager.html
+++ b/frontend/angula_php/src/app/admin/permissionmanager/permissionmanager.html
@@ -2,11 +2,11 @@
 <div class="bg-light" style="min-height: 100vh">
   <div class="container-lg py-5">
     <div class="bg-white shadow-lg rounded-3 overflow-hidden">
-      <!-- Header -->
-      <header class="bg-xanhngoc bg-gradient text-white p-4 p-md-5">
-        <h1 class="h2 text-white mb-1">Bảng điều khiển phân quyền</h1>
-        <p class="text-white-50 mb-0">Quản lý quyền truy cập của người dùng trong hệ thống</p>
-      </header>
+      
+      <div class="bg-xanhngoc bg-gradient  p-4 p-md-5">
+        <h1 class="h2 text-black mb-1">Bảng điều khiển phân quyền</h1>
+        <p class="text-black-50 mb-0">Quản lý quyền truy cập của người dùng trong hệ thống</p>
+      </div>
      
       <!-- Danh sách người dùng -->
       <div class="p-4 p-md-5">
